Added buttons style, added DialogFragment to confirm deleting a record

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,9 @@
     <string name="saveRecord">Сохранить рассчеты</string>
     <string name="deleteRecord">Удалить запись</string>
 
+    <string name="confirm_title">Подтверждение</string>
+    <string name="confirm_text">Вы действительно хотите удалить запись?</string>
+    <string name="confirm_yes">Да</string>
+    <string name="confirm_no">Нет</string>
+
 </resources>
